add details for each plan types

--- a/index.html
+++ b/index.html
@@ -12,20 +12,60 @@
 
 <body>
     <div class="panel">
-        <div class="mobile-plan">
+        <div class="plan-type">
+            <img src="images/mobile.jpg" alt="" class="plan-img">
+            <h2 class="plan-title">Mobile</h2>
+            <ul class="pricing-features">
+                <li class="pricing-feature">Watch on 1 phone or tablet at a time</li>
+                <li class="pricing-feature">Unlimited movies, TV shows, and mobile games</li>
+                <li class="pricing-feature">Ad-free TV shows and movies</li>
+                <li class="pricing-feature">Download on 1 phone or tablet at a time</li>
+                <span class="plan-price">149 PHP/month</span>
+                <a href="#/" class="plan-price-button">Sign Up</a>
+            </ul>
 
         </div>
 
-        <div class="basic-plan">
-
+        <div class="plan-type">
+            <img src="images/basic.jpg" alt="" class="plan-img">
+            <h2 class="plan-title">Basic</h2>
+            <ul class="pricing-features">
+                <li class="pricing-feature">Watch on 1 phone or tablet at a time</li>
+                <li class="pricing-feature">Unlimited movies, TV shows, and mobile games</li>
+                <li class="pricing-feature">Ad-free TV shows and movies</li>
+                <li class="pricing-feature">Download on 1 phone or tablet at a time</li>
+                <li class="pricing-feature">Watch in HD</li>
+                <span class="plan-price">369 PHP/month</span>
+                <a href="#/" class="plan-price-button">Sign Up</a>
+            </ul>
         </div>
 
-        <div class="standard-plan">
-
+        <div class="plan-type">
+            <img src="images/standard.jpg" alt="" class="plan-img">
+            <h2 class="plan-title">Standard</h2>
+            <ul class="pricing-features">
+                <li class="pricing-feature">Watch on 2 supported devices at a time</li>
+                <li class="pricing-feature">Unlimited movies, TV shows, and mobile games</li>
+                <li class="pricing-feature">Ad-free TV shows and movies</li>
+                <li class="pricing-feature">✓ Download on 2 supported devices at a time</li>
+                <li class="pricing-feature">Watch in Full HD</li>
+                <span class="plan-price">459 PHP/month</span>
+                <a href="#/" class="plan-price-button">Sign Up</a>
+            </ul>
         </div>
 
-        <div class="premium-plan">
-
+        <div class="plan-type">
+            <img src="images/premium.jpg" alt="" class="plan-img">
+            <h2 class="plan-title">Premium</h2>
+            <ul class="pricing-features">
+                <li class="pricing-feature">Watch on 4 supported devices at a time</li>
+                <li class="pricing-feature">Unlimited movies, TV shows, and mobile games</li>
+                <li class="pricing-feature">Ad-free TV shows and movies</li>
+                <li class="pricing-feature">✓ Download on 4 supported devices at a time</li>
+                <li class="pricing-feature">Watch in Ultra HD</li>
+                <span class="plan-price">549 PHP/month</span>
+                <a href="#/" class="plan-price-button is-featured">Recommended Plan</a>
+            </ul>
         </div>
 
     </div> <!-- End of Panel Container -->
