configure the panel container

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li class="pricing-feature">Watch on 2 supported devices at a time</li>
                 <li class="pricing-feature">Unlimited movies, TV shows, and mobile games</li>
                 <li class="pricing-feature">Ad-free TV shows and movies</li>
-                <li class="pricing-feature">✓ Download on 2 supported devices at a time</li>
+                <li class="pricing-feature">Download on 2 supported devices at a time</li>
                 <li class="pricing-feature">Watch in Full HD</li>
                 <span class="plan-price">459 PHP/month</span>
                 <a href="#/" class="plan-price-button">Sign Up</a>
@@ -61,7 +61,7 @@
                 <li class="pricing-feature">Watch on 4 supported devices at a time</li>
                 <li class="pricing-feature">Unlimited movies, TV shows, and mobile games</li>
                 <li class="pricing-feature">Ad-free TV shows and movies</li>
-                <li class="pricing-feature">✓ Download on 4 supported devices at a time</li>
+                <li class="pricing-feature">Download on 4 supported devices at a time</li>
                 <li class="pricing-feature">Watch in Ultra HD</li>
                 <span class="plan-price">549 PHP/month</span>
                 <a href="#/" class="plan-price-button is-featured">Recommended Plan</a>
