--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <img src="images/mobile.jpg" alt="" class="plan-img">
             <h2 class="plan-title">Mobile</h2>
             <ul class="pricing-features">
-                <li class="pricing-feature">Watch on 1 phone or tablet at a time</li>
-                <li class="pricing-feature">Unlimited movies, TV shows, and mobile games</li>
-                <li class="pricing-feature">Ad-free TV shows and movies</li>
-                <li class="pricing-feature">Download on 1 phone or tablet at a time</li>
+                <li class="pricing-feature-item">Watch on 1 phone or tablet at a time</li>
+                <li class="pricing-feature-item">Unlimited movies, TV shows, and mobile games</li>
+                <li class="pricing-feature-item">Ad-free TV shows and movies</li>
+                <li class="pricing-feature-item">Download on 1 phone or tablet at a time</li>
                 <span class="plan-price">149 PHP/month</span>
                 <a href="#/" class="plan-price-button">Sign Up</a>
             </ul>
@@ -30,11 +30,11 @@
             <img src="images/basic.jpg" alt="" class="plan-img">
             <h2 class="plan-title">Basic</h2>
             <ul class="pricing-features">
-                <li class="pricing-feature">Watch on 1 phone or tablet at a time</li>
-                <li class="pricing-feature">Unlimited movies, TV shows, and mobile games</li>
-                <li class="pricing-feature">Ad-free TV shows and movies</li>
-                <li class="pricing-feature">Download on 1 phone or tablet at a time</li>
-                <li class="pricing-feature">Watch in HD</li>
+                <li class="pricing-feature-item">Watch on 1 phone or tablet at a time</li>
+                <li class="pricing-feature-item">Unlimited movies, TV shows, and mobile games</li>
+                <li class="pricing-feature-item">Ad-free TV shows and movies</li>
+                <li class="pricing-feature-item">Download on 1 phone or tablet at a time</li>
+                <li class="pricing-feature-item">Watch in HD</li>
                 <span class="plan-price">369 PHP/month</span>
                 <a href="#/" class="plan-price-button">Sign Up</a>
             </ul>
@@ -44,11 +44,11 @@
             <img src="images/standard.jpg" alt="" class="plan-img">
             <h2 class="plan-title">Standard</h2>
             <ul class="pricing-features">
-                <li class="pricing-feature">Watch on 2 supported devices at a time</li>
-                <li class="pricing-feature">Unlimited movies, TV shows, and mobile games</li>
-                <li class="pricing-feature">Ad-free TV shows and movies</li>
-                <li class="pricing-feature">Download on 2 supported devices at a time</li>
-                <li class="pricing-feature">Watch in Full HD</li>
+                <li class="pricing-feature-item">Watch on 2 supported devices at a time</li>
+                <li class="pricing-feature-item">Unlimited movies, TV shows, and mobile games</li>
+                <li class="pricing-feature-item">Ad-free TV shows and movies</li>
+                <li class="pricing-feature-item">Download on 2 supported devices at a time</li>
+                <li class="pricing-feature-item">Watch in Full HD</li>
                 <span class="plan-price">459 PHP/month</span>
                 <a href="#/" class="plan-price-button">Sign Up</a>
             </ul>
@@ -58,11 +58,11 @@
             <img src="images/premium.jpg" alt="" class="plan-img">
             <h2 class="plan-title">Premium</h2>
             <ul class="pricing-features">
-                <li class="pricing-feature">Watch on 4 supported devices at a time</li>
-                <li class="pricing-feature">Unlimited movies, TV shows, and mobile games</li>
-                <li class="pricing-feature">Ad-free TV shows and movies</li>
-                <li class="pricing-feature">Download on 4 supported devices at a time</li>
-                <li class="pricing-feature">Watch in Ultra HD</li>
+                <li class="pricing-feature-item">Watch on 4 supported devices at a time</li>
+                <li class="pricing-feature-item">Unlimited movies, TV shows, and mobile games</li>
+                <li class="pricing-feature-item">Ad-free TV shows and movies</li>
+                <li class="pricing-feature-item">Download on 4 supported devices at a time</li>
+                <li class="pricing-feature-item">Watch in Ultra HD</li>
                 <span class="plan-price">549 PHP/month</span>
                 <a href="#/" class="plan-price-button is-featured">Recommended Plan</a>
             </ul>
