do media query and finish the project

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li class="pricing-feature-item">Unlimited movies, TV shows, and mobile games</li>
                 <li class="pricing-feature-item">Ad-free TV shows and movies</li>
                 <li class="pricing-feature-item">Download on 1 phone or tablet at a time</li>
+                <li class="pricing-feature-item" style="visibility: hidden;">Test</li>
                 <span class="plan-price">149 PHP/month</span>
                 <a href="#/" class="plan-price-button">Sign Up</a>
             </ul>
@@ -64,7 +65,7 @@
                 <li class="pricing-feature-item">Download on 4 supported devices at a time</li>
                 <li class="pricing-feature-item">Watch in Ultra HD</li>
                 <span class="plan-price">549 PHP/month</span>
-                <a href="#/" class="plan-price-button is-featured">Recommended Plan</a>
+                <a href="#/" class="plan-price-button is-featured">Recommended</a>
             </ul>
         </div>
 
